examples/errors/invalid_main_fun/main.lc

function main(name: string) {
	print(name);
}
